fix: change the message alignment

--- a/fun-chat/src/pages/chat-page/main/message-section/chat-field/chat-field.css
+++ b/fun-chat/src/pages/chat-page/main/message-section/chat-field/chat-field.css
@@ -1,5 +1,5 @@
 .chat-field__title {
-  margin-top: 10%;
+  margin-bottom: 10%;
 }
 
 .chat-field__separator {
