--- a/fun-chat/src/pages/chat-page/main/message-section/message-section.css
+++ b/fun-chat/src/pages/chat-page/main/message-section/message-section.css
@@ -24,6 +24,7 @@
   gap: 0.5rem;
   flex-direction: column;
   align-items: center;
+  justify-content: flex-end;
 }
 
 .message-section__chat-form {
